--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Aplikasi Story App</string>
+    <string name="welcome_message">Welcome to Aplikasi Story</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="login_button">Login</string>
+    <string name="register_button">Register</string>
+    <string name="hint_name">Name</string>
+    <string name="logo_dicoding">logo_dicoding</string>
 </resources>
