--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,20 @@
     <string name="login_button">Login</string>
     <string name="register_button">Register</string>
     <string name="hint_name">Name</string>
+    <string name="story_title">Story Title</string>
+    <string name="story_date">Story Date</string>
+    <string name="image">Image</string>
+    <string name="description">Description</string>
+    <string name="add_image">Add Image</string>
+    <string name="show_more">Show more</string>
     <string name="logo_dicoding">logo_dicoding</string>
     <string name="photo">image</string>
     <string name="loading">loading</string>
+    <string name="story_app">Story App</string>
+    <string name="settings">Settings</string>
+    <string name="add_story">Add Story</string>
+    <string name="camera_button">Camera</string>
+    <string name="gallery_button">Gallery</string>
+    <string name="back_button_description">Back</string>
+    <string name="message_welcome_page">Exciting, inspiring and meaningful stories at your fingertips.</string>
 </resources>
