--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Aplikasi Story App</string>
+    <string name="app_name">Story App</string>
     <string name="welcome_message">Welcome to Aplikasi Story</string>
     <string name="email_hint" >Email</string>
     <string name="password_hint">Password</string>
