Memperbaiki loading di detail

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -11,20 +11,20 @@
     <string name="story_date">Tanggal Cerita</string>
     <string name="image">Gambar</string>
     <string name="description">Deskripsi</string>
-    <string name="add_image">Masukkan Gambar</string>
+    <string name="add_image">Tambahkan Gambar</string>
     <string name="show_more">Tampilkan</string>
     <string name="ic_logo">logo</string>
     <string name="photo">Gambar</string>
     <string name="loading">Memuat</string>
     <string name="story_app">Story App</string>
-    <string name="settings">Setting</string>
-    <string name="add_story">Masukkan Cerita</string>
+    <string name="settings">Pengaturan</string>
+    <string name="add_story">Tambahkan Cerita</string>
     <string name="camera_button">Kamera</string>
-    <string name="gallery_button">Gallery</string>
+    <string name="gallery_button">Galeri</string>
     <string name="back_button_description">Kembali</string>
-    <string name="message_welcome_page">Exciting, inspiring and meaningful stories at your fingertips.</string>
-    <string name="add_widget">Add widget</string>
-    <string name="app_widget_description">This is an app widget description</string>
-    <string name="empty_text">NO DATA</string>
+    <string name="message_welcome_page">Kisah-kisah menarik, inspiratif, dan bermakna di ujung jari Anda.</string>
+    <string name="add_widget">Tambahkan widget</string>
+    <string name="app_widget_description">Ini adalah deskripsi widget aplikasi</string>
+    <string name="empty_text">TIDAK ADA DATA</string>
     <string name="item_widget">Item widget</string>
 </resources>
