--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -18,6 +18,8 @@
     <string name="loading">Memuat</string>
     <string name="story_app">Story App</string>
     <string name="settings">Pengaturan</string>
+    <string name="logout">Keluar</string>
+    <string name="language">Pilih Bahasa</string>
     <string name="add_story">Tambahkan Cerita</string>
     <string name="camera_button">Kamera</string>
     <string name="gallery_button">Galeri</string>
