--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Story App</string>
     <string name="welcome_message">Welcome to Aplikasi Story</string>
-    <string name="email_hint" >Email</string>
+    <string name="email_hint">Email</string>
     <string name="password_hint">Password</string>
     <string name="login_button">Login</string>
     <string name="register_button">Register</string>
@@ -30,4 +30,14 @@
     <string name="empty_text">NO DATA</string>
     <string name="email_invalid_error">Invalid email address</string>
     <string name="password_length_error">Password must be at least 8 characters</string>
+    <string name="title_activity_maps">Maps</string>
+    <string name="retry">Retry</string>
+    <string name="add_location">Current location</string>
+
+
+    <string name="normal_type">Normal</string>
+    <string name="satellite_type">Satellite</string>
+    <string name="terrain_type">Terrain</string>
+    <string name="hybrid_type">Hybrid</string>
+
 </resources>
